@@ -1,110 +1,135 @@
-.. todo:: Write Configuration Guide for 2.5
+===============================
+Crafter CMS Configuration Guide
+===============================
 
-Configure Crafter CMS 2.5
--------------------------
+----------------------
+Configure the Database
+----------------------
 
-Crafter CMS Database
-~~~~~~~~~~~~~~~~~~~~
+*   Derby embedded (configured by default for evaluation)
 
-* Derby embedded Configured by default (evaluation version)
-.. code-block:: none
-    :caption: TOMCAT/shared/classes/crafter/cstudio/extension/server-config.properties
+    .. code-block:: properties
+        :caption: TOMCAT/shared/classes/crafter/cstudio/extension/server-config.properties
 
-    studio.db.platform=derby
-    studio.db.name=CRAFTER
-    studio.db.username=crafter
-    studio.db.password=crafter
-    studio.db.driver=org.apache.derby.jdbc.EmbeddedDriver
-    studio.db.derby.path=data/derby/${studio.db.name}
-    studio.db.url=jdbc:derby:${studio.db.derby.path}
+        studio.db.platform=derby
+        studio.db.name=CRAFTER
+        studio.db.username=crafter
+        studio.db.password=crafter
+        studio.db.driver=org.apache.derby.jdbc.EmbeddedDriver
+        studio.db.derby.path=data/derby/${studio.db.name}
+        studio.db.url=jdbc:derby:${studio.db.derby.path}
 
-* Derby standalone
-.. code-block:: none
-    :caption: TOMCAT/shared/classes/crafter/cstudio/extension/server-config.properties
+..
+    *   Derby standalone
+        .. code-block:: none
 
-.. todo:: Add Derby standalone configuration
+*   MySQL
 
-* MySql
-.. code-block:: none
-    :caption: TOMCAT/shared/classes/crafter/cstudio/extension/server-config.properties
+    .. code-block:: properties
+        :caption: TOMCAT/shared/classes/crafter/cstudio/extension/server-config.properties
 
-    studio.db.platform=mysql
-    studio.db.name=crafter
-    studio.db.username=crafter
-    studio.db.password=crafter
-    studio.db.driver=org.gjt.mm.mysql.Driver
-    studio.db.url=jdbc:mysql://localhost:3306/${studio.db.name}?useUnicode=yes&characterEncoding=UTF-8
+        studio.db.platform=mysql
+        studio.db.name=crafter
+        studio.db.username=crafter
+        studio.db.password=crafter
+        studio.db.driver=org.gjt.mm.mysql.Driver
+        studio.db.url=jdbc:mysql://localhost:3306/${studio.db.name}?useUnicode=yes&characterEncoding=UTF-8
 
-* Postgres
-.. code-block:: none
-    :caption: TOMCAT/shared/classes/crafter/cstudio/extension/server-config.properties
+*   Postgres
 
-    studio.db.platform=postgres
-    studio.db.name=crafter
-    studio.db.username=crafter
-    studio.db.password=crafter
-    studio.db.driver=org.postgresql.Driver
-    studio.db.url=jdbc:postgresql://localhost:5432/${studio.db.name}
+    .. code-block:: properties
+        :caption: TOMCAT/shared/classes/crafter/cstudio/extension/server-config.properties
 
-* Oracle
-.. code-block:: none
-    :caption: TOMCAT/shared/classes/crafter/cstudio/extension/server-config.properties
+        studio.db.platform=postgres
+        studio.db.name=crafter
+        studio.db.username=crafter
+        studio.db.password=crafter
+        studio.db.driver=org.postgresql.Driver
+        studio.db.url=jdbc:postgresql://localhost:5432/${studio.db.name}
 
-    studio.db.platform=oracle
-    studio.db.name=crafter
-    studio.db.username=crafter
-    studio.db.password=crafter
-    studio.db.driver=oracle.jdbc.OracleDriver
-    studio.db.url=jdbc:oracle:thin:@localhost:1521:orcl
+*   Oracle
 
-* MS SQL Server
-.. code-block:: none
-    :caption: TOMCAT/shared/classes/crafter/cstudio/extension/server-config.properties
+    .. code-block:: properties
+        :caption: TOMCAT/shared/classes/crafter/cstudio/extension/server-config.properties
 
-    studio.db.platform=sqlserver
-    studio.db.name=crafter
-    studio.db.username=crafter
-    studio.db.password=crafter
-    studio.db.driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
-    studio.db.url=jdbc:sqlserver://localhost:1433;databaseName=${studio.db.name};user=${studio.db.username};password=${studio.db.password};
+        studio.db.platform=oracle
+        studio.db.name=crafter
+        studio.db.username=crafter
+        studio.db.password=crafter
+        studio.db.driver=oracle.jdbc.OracleDriver
+        studio.db.url=jdbc:oracle:thin:@localhost:1521:orcl
 
-Content Repository
-~~~~~~~~~~~~~~~~~~
+*   MS SQL Server
 
-* Disk (evaluation) Repository
-.. code-block:: none
-    :caption: TOMCAT/shared/classes/crafter/cstudio/extension/server-config.properties
+    .. code-block:: properties
+        :caption: TOMCAT/shared/classes/crafter/cstudio/extension/server-config.properties
 
-    repositoryType=default
-    securityType=default
-    repository.diskImplementation.path=INSTALLATION_PATH/crafter/data/repo
+        studio.db.platform=sqlserver
+        studio.db.name=crafter
+        studio.db.username=crafter
+        studio.db.password=crafter
+        studio.db.driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
+        studio.db.url=jdbc:sqlserver://localhost:1433;databaseName=${studio.db.name};user=${studio.db.username};password=${studio.db.password};
 
-* Alfresco Repository
-.. code-block:: none
-    :caption: TOMCAT/shared/classes/crafter/cstudio/extension/server-config.properties
+--------------------------------
+Configure the Content Repository
+--------------------------------
 
-    repositoryType=alfresco
-    securityType=alfresco
-    alfrescoUrl=http://ALFRESCO_SERVER_NAME_GOES_HERE:ALFRESCO_PORT_GOES_HERE/alfresco
-    repositoryJob.password=MYUSER
-    repositoryJob.username=MYPASSWORD
+*   Disk Repository (configured by default for evaluation)
+
+    .. code-block:: properties
+        :caption: TOMCAT/shared/classes/crafter/cstudio/extension/server-config.properties
+
+        repositoryType=default
+        securityType=default
+        repository.diskImplementation.path=INSTALLATION_PATH/crafter/data/repo
+
+*   Alfresco Repository
+
+    .. code-block:: properties
+        :caption: TOMCAT/shared/classes/crafter/cstudio/extension/server-config.properties
+
+        repositoryType=alfresco
+        securityType=alfresco
+        alfrescoUrl=http://ALFRESCO_SERVER_NAME_GOES_HERE:ALFRESCO_PORT_GOES_HERE/alfresco
+        repositoryJob.password=MYUSER
+        repositoryJob.username=MYPASSWORD
 
 .. note::
-    Crafter will BOOTSTRAP 2 folders in to your Alfresco repository
+    Crafter will bootstrap 2 folders in to your Alfresco repository:
 
-    #. cstudio: Where your project STUDIO CONFIGURATION is stored
+        #.  **cstudio:** Where your project configuration is stored
+        #.  **wem-projects:** Where your project content is stored
 
-    #. wem-projects: Where your project CONTENT is stored
+.. warning::
+    Your Content Repository and your Crafter Studio Database need to be in sync.  When you connect to Alfresco for the first time,
+    it's recommended that you bring these up to sync or that you clear your studio database.
 
-.. note::
-    Your Content Repository and your Crafter Studio Database need to be in sync.  When you connect to Alfresco for the first time, it's recommended that you bring these in to sync or that you clear your studio database.
+-------------------
+Configure JAVA_HOME
+-------------------
 
+.. code-block:: properties
+    :caption: TOMCAT/bin/setenv.sh
 
-Run Crafter on Ports other than 8080
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+    export JAVA_HOME=/usr
 
-#. Assuming tomcat: for the server, update the ports the server runs on (Example: 9090)
-.. code-block:: none
+------------------------
+Configure the JVM Memory
+------------------------
+
+.. code-block:: properties
+    :caption: TOMCAT/bin/setenv.sh
+
+    JAVA_OPTS="$JAVA_OPTS -server -Xms1G -Xmx4G -XX:MaxPermSize=512M"
+
+----------------------
+Configure Tomcat Ports
+----------------------
+
+#.  Assuming Tomcat as the server, update the ports the server runs on:
+
+.. code-block:: xml
     :caption: TOMCAT/conf/server.xml
 
     <Server port="9005" shutdown="SHUTDOWN">
@@ -116,21 +141,23 @@ Run Crafter on Ports other than 8080
     <Connector port="9009" protocol="AJP/1.3" redirectPort="8443" />
     <Connector port="9443" protocol="org.apache.coyote.http11.Http11Protocol" SSLEnabled="true"...
 
-#. Update Crafter Search endpoint configuration (this URL points to the Crafter Search instance supporting preview)
-.. code-block:: none
+#.  Update Crafter Search endpoint configuration (this URL points to the Crafter Search instance supporting preview)
+
+.. code-block:: properties
     :caption: TOMCAT/shared/classes/crafter/engine/extension/server-config.properties
 
     crafter.engine.search.server.url=http://localhost:9090/crafter-search
 
-.. code-block:: none
+.. code-block:: properties
     :caption: TOMCAT/shared/classes/crafter/cstudio/extension/server-config.properties
 
     crafter.engine.search.server.url=http://localhost:9090/crafter-search
 
+----------------------------------------------
 Configure Email for Workflow and Notifications
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+----------------------------------------------
 
-.. code-block:: none
+.. code-block:: properties
     :caption: TOMCAT/shared/classes/crafter/cstudio/extension/server-config.properties
 
     crafter.studio.mail.from.default=default@mail.com
@@ -141,28 +168,27 @@ Configure Email for Workflow and Notifications
     crafter.studio.mail.smtp.auth=false
     crafter.studio.mail.smtp.starttls.enable=false
 
-Changing Ports on your Preview Server Deployer
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+------------------------------------
+Configure the Preview Deployer Ports
+------------------------------------
 
-In some cases (when you want to run more than one full studio install side by side) you need to change the ports on the deployer.  To do this update the following
+In some cases (when you want to run more than one full studio install side by side) you need to change the ports on the deployer.
+To do this, update the following:
 
-#. Tell Studio where to look for it's deployer by setting the properties below. If you're just changing the port, set only the port property.  Other properties are listed in case you would like to change them as well.  Update the properties file and restart the studio application.
-.. code-block:: none
-    :caption: TOMCAT/shared/classes/crafter/cstudio/extension/server-config.properties
+#.  Tell Studio where to look for it's deployer by setting the properties below. If you're just changing the port, set only the port
+    property. Other properties are listed in case you would like to change them as well.
 
-    crafter.deployer.server=localhost
-    crafter.deployer.port=9595
-    crafter.deployer.target=sample
-    crafter.deployer.password=admin
+    .. code-block:: properties
+        :caption: TOMCAT/shared/classes/crafter/cstudio/extension/server-config.properties
 
-#. Configure the deployer to run on the specified port
-.. code-block:: none
-    :caption: CRAFTER-HOME/crafter-deployer/conf/custom-receiver.properties
+        crafter.deployer.server=localhost
+        crafter.deployer.port=9595
+        crafter.deployer.target=preview
+        crafter.deployer.password=admin
 
-    receiver.port=9595
+#.  Configure the deployer to run on the specified port
 
-Adding Social and Profile Support to Crafter
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-.. todo:: Crafter Social endpoint configuration
-.. todo:: Crafter Profile endpoint configuration
+    .. code-block:: properties
+        :caption: INSTALL_DIR/crafter-deployer/conf/custom-receiver.properties
 
+        receiver.port=9595
